# UnimodalPseudoCollusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
archive/: scratch_pricing_competition.py  scratch_pricing_competition_ucb.py
experiments/EXPERIMENT_ANALYSIS_000/_scripts/: analysis_combine_noise.py  analysis_pgp_gp.py  analysis_pgp_hgb.py  analysis_tuning_results.py  analysis_tuning_results_squared.py  check_noise.py  evaluate_algorithms_fixed_params.py  sample_plot_competitions.py  tuning_run.py  tuning_sample_definition.py
experiments/EXPERIMENT_ANALYSIS_000/algorithm_evaluations/: analyse_evaluation.py
experiments/EXPERIMENT_COMPETITION/_scripts/: agent_definition.py  analyse_competitions_1.py  analyse_competitions_2.py  analyse_competitions_3.py  cases_definition.py  competitions_run.py  run_eps_vs_eps.py  sample_competition_plots.py
experiments/EXPERIMENT_COMPETITION_STATIONARY/_scripts/: agent_definition.py  analyse_competitions_1.py  analyse_competitions_2.py  cases_definition.py  competitions_run.py  plotting_utils.py  run_ucb_vs_ucb.py  run_uts_vs_uts.py
src/tools/: competition.py  sampling.py
src/tools/bandits/: sw_eps.py  sw_ucb_u.py  sw_uts.py
src/tools/evaluation/: evaluate.py  evaluate_nonstationary_triangle.py  evaluate_stationary_triangle.py
