[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tools"
version = "0.1.0"
description = "Project tools"
authors = [{ name="Your Name", email="you@example.com" }]
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]